fallback to default user, if none is defined for the project

--- a/templates/etc/systemd/system/tracd.service.j2
+++ b/templates/etc/systemd/system/tracd.service.j2
@@ -8,7 +8,7 @@ After=network.target
 [Service]
 type=forking
 Environment="PKG_RESOURCES_CACHE_ZIP_MANIFESTS=1"
-ExecStart=/usr/bin/tracd --daemonize --pidfile=/run/tracd.{{ item.name }}.pid --protocol=http --port {{ item.tracd_port }} --user={{ item.user }} --group={{ item.group }} --single-env {{ trac_project_root }}/{{ item.name }}
+ExecStart=/usr/bin/tracd --daemonize --pidfile=/run/tracd.{{ item.name }}.pid --protocol=http --port {{ item.tracd_port }} --user={{ item.user|default(trac_user) }} --group={{ item.group|default(trac_group) }} --single-env {{ trac_project_root }}/{{ item.name }}
 PIDFile=/run/tracd.{{ item.name }}.pid
 Restart=on-failure
 
